--- a/front-end/ResultsPage.ejs
+++ b/front-end/ResultsPage.ejs
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <title>Polls results</title>
     <link rel="stylesheet" href="ResultPageStyle.css">
-
+    <style>
+        body {
+        background-image: url('images/background_gradient.png');
+        background-size: cover; 
+        background-position: center; 
+        }
+    </style>
 </head>
 <body>
 <select id="select-type">
