--- a/front-end/1stTest2ndPartStyles.css
+++ b/front-end/1stTest2ndPartStyles.css
@@ -11,8 +11,7 @@ body {
     background-color: rgba(33, 223, 230, 0.95);
     color: black;
 }
-
-.table{
+.table_main{
     border: 2px solid white; 
     background-color: #f0f0f0; 
     padding: 20px; 
@@ -25,13 +24,23 @@ body {
     max-width: 64%;
     margin: 0 auto;
 }
+.tr_style{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
 tbody{
-    /* display: flex;
-    justify-content: space-between; */
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     font-size: 1.2em;
     font-weight: 500;
     letter-spacing: .15em;
     
+}
+
+.table{
+    width: 100%;
 }
 
 header {
@@ -97,11 +106,8 @@ input[type="radio"] {
     font-weight: 500;
     width: 100%;
 }
+
 .next-btn:hover {
     opacity: .7;
 }
-
-
-
-
 
