--- a/front-end/AdminRegistrationForm.ejs
+++ b/front-end/AdminRegistrationForm.ejs
@@ -2,45 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="RegistrationFormStyles.css">
-  <title>Admin registration form</title>
+  <link rel="stylesheet" href="./AdminRegistrationStyles.css">
+  <title>Admin registration</title>
+  <style>
+    body {
+    background-image: url('images/background_gradient.png');
+    background-size: cover; 
+    background-position: center; 
+    }
+  </style>
 </head>
 
-<section class = "container">
-  <header>
-    <div>
-      <h1>Admin registration form</h1>
+<body>
+  <section class="container">
+    <h1>Регистрация Администратора</h1>
+    <form id="login-form" method="POST" action="/adminRegister">
+      <input type="text" name="login" id="user-name" placeholder="Login" required class="input">
+      <input type="password" name="password" id="user-password" placeholder="Password" required class="input">
+      <div class="form-group">
+        <label for="id-select">Возраст</label>
+        <select class="select-style" name="age" id="id-select"></select>
+      </div>
+      <div class="form-group">
+        <label for="id-sex">Пол:</label>
+        <div class="select-wrapper">
+          <select class="select-style" name="sex" id="id-sex">
+            <option value="m">Мужчина</option>
+            <option value="f">Женщина</option>
+          </select>
+        </div>
+      </div>
+      <button class="first-button" type="submit" id="register">Создать аккаунт</button>
+    </form>
+    <div id="error-message">
+      <% if (errorMessage) { %>
+        <p class="error-message"><%= errorMessage %></p>
+      <% } %>
     </div>
-  </header>
+  </section>
 
-  <body>
-  <form id="login-form" method="POST" action="/admin/register">
-    <input type="text" name="login" id="user-name" placeholder="Login" required class = "input">
-    <br>
-    <input type="password" name="password" id="user-password" placeholder="Password" required class = "input">
-    <select name="age" id="id-select"></select>
-    <br>
-    <select name="sex">
-      <option value="m">Мужчина</option>
-      <option value="f">Женщина</option>
-    </select>
-    <br>
-    <button class="first-button" type="submit" id="register">REGISTER</button>
-  </form>
-  </body>
-
-  <div id="error-message">
-    <% if (errorMessage) { %>
-      <p class = "error-message"><%= errorMessage %></p>
-    <% } %>
-  </div>
-</section>
+  <script>
+    const ageSelect = document.getElementById("id-select");
+    for (let i = 18; i <= 45; i++) {
+      const option = document.createElement("option");
+      option.value = i;
+      option.textContent = i;
+      ageSelect.appendChild(option);
+    }
+  </script>
 </body>
-<script>
-  const ageSelect = document.getElementById("id-select")
-
-  for (let i=18;i <= 45;i++){
-    ageSelect.innerHTML += "<option value=\"" + i + "\">" + i + "</option>"
-  }
-</script>
 </html>
