--- a/front-end/CreateInviteLinkPage.ejs
+++ b/front-end/CreateInviteLinkPage.ejs
@@ -3,27 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CreateInviteLinkPageStyle.css">
-    <title>Create Invite Link Page</title>
+    <title>Create Invite Link</title>
+    <style>
+        body {
+        background-image: url('images/background_gradient.png');
+        background-size: cover; 
+        background-position: center; 
+        }
+    </style>
 </head>
 <body>
-<div id="test-type-selects">
-    <select id="test-type-select" required>
-        <option value="">Выберите тест </option>
-        <option value="poll_1_part_1">Тест на характеристики</option>
-        <option value="sound_test">Тест на реакцию на звук</option>
-        <option value="light_test">Тест на реакцию на свет</option>
-        <option value="visual_math_test">Математические примеры(визуально)</option>
-        <option value="math_sound">Математические примеры (на слух)</option>
-        <option value="multiple_colours_test">Тест на изменение цвета</option>
-        <option value="easy_action">Тест на простое движение (точность)</option>
-        <option value="hard_action">Тест на сложное движение (точность)</option>
-    </select>
-</div>
-<div>
-    <button type="submit" id="get-invite-button">Создать ссылку-приглашение</button>
-</div>
-<div id="invite-link-enclosing"></div>
-<div id="link-copied"></div>
+    <section class="container">
+        <div id="test-type-selects">
+            <select id="test-type-select" required>
+                <option value="">Выберите тест </option>
+                <option value="poll_1_part_1">Тест на характеристики</option>
+                <option value="sound_test">Тест на реакцию на звук</option>
+                <option value="light_test">Тест на реакцию на свет</option>
+                <option value="visual_math_test">Математические примеры(визуально)</option>
+                <option value="math_sound">Математические примеры (на слух)</option>
+                <option value="multiple_colours_test">Тест на изменение цвета</option>
+                <option value="easy_action">Тест на простое движение (точность)</option>
+                <option value="hard_action">Тест на сложное движение (точность)</option>
+            </select>
+        </div>
+        <div>
+            <button type="submit" id="get-invite-button">Создать ссылку-приглашение</button>
+        </div>
+        <div id="invite-link-enclosing"></div>
+        <div id="link-copied"></div>
+    </section>
 </body>
 <script>
     let inviteLink = null, linkGenerated, i=1
