--- a/front-end/CreateInviteLinkPageStyle.css
+++ b/front-end/CreateInviteLinkPageStyle.css
@@ -1,41 +1,54 @@
-:root {
-    --primary-color: rgba(12, 32, 77, 0.95);
-    --overlay-color: rgba(12, 28, 67, 0.95);
-    --main-color: rgb(12, 32, 77);
-    --addl-color: rgba(0, 103, 187, .8);
-    --font-style: 'Verdana', sans-serif;
+:root{
+    --primary-color: rgba(33, 223, 230, 0.95);
+    --overlay-color: linear-gradient(244deg, #e70af2,#009bff,#4abde3);
+    --addl-color: rgba(74, 189, 227);
+    --font-family: Verdana, Geneva, sans-serif
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    width: 100%; 
 }
 
 body {
-    background-color: var(--main-color);
+    background-color: rgba(33, 223, 230, 0.95);
     font-weight: 500;
-    margin-top: 10%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    font-family: var(--font-style);
 }
 
 select {
-    background-color: var(--overlay-color);
-    border-radius: 3px;
-    color: white;
-    font-family: var(--font-style);
+    display: flex;
+    flex-direction: column;
+    background-color:  white;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    color: black;
+    background-position: center right; 
+    text-align-last: center;
+    /* font-family: var(--font-style); */
     font-size: 1.2em;
     letter-spacing: .18em;
-    padding: .5em 2em;
-    /*   margin: 15% 0 3em 3em; */
-    /*   margin-top: 20%;
-      margin-left: 30%; */
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-    align-items: center;
+    align-self: center;
+    justify-content: center;
     height: 3.5em;
     text-transform: uppercase;
+    text-align: center;
+    -webkit-text-align: center;
 }
 
 button {
-    background-color: white;
+    background-color: rgb(123, 83, 234);
     border: none;
     border-radius: 3px;
-    color: var(--primary-color);
+    color: white;
     font-size: 1.2em;
     text-transform: uppercase;
     letter-spacing: .18em;
