--- a/front-end/LoginForm.ejs
+++ b/front-end/LoginForm.ejs
@@ -3,23 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="LoginFormStyle.css">
-  <title>Login form</title>
+  <title>Login</title>
+  <style>
+    body {
+        background-image: url('images/background_gradient.png');
+        background-size: cover; 
+        background-position: center; 
+    }
+</style>
 </head>
 
 <section class = "container">
   <header>
     <div>
-      <h1>Login form</h1>
+      <h1>Авторизация</h1>
     </div>
   </header>
 
   <body>
-  <form id="login-form" method="POST" action="/login">
+  <form class="login_form" id="login-form" method="POST" action="/login">
     <input type="text" name="login" id="user-name" placeholder="Login" required class = "input">
     <br>
     <input type="password" name="password" id="user-password" placeholder="Password" required class = "input">
     <br>
-    <button class="first-button" type="submit" id="register">LOGIN</button>
+    <button class="first-button" type="submit" id="register">Войти</button>
   </form>
   </body>
 
@@ -30,7 +37,7 @@
   </div>
 
   <div id="login-button">
-    <a class = "second-button" href="/register"><p><u>Create account</u></p></a>
+    <a class = "second-button" href="/register"><p><u>Регистрация</u></p></a>
   </div>
 </section>
 </body>
