--- a/front-end/LoginFormStyle.css
+++ b/front-end/LoginFormStyle.css
@@ -1,13 +1,12 @@
 :root{
-    --primary-color: rgba(12, 32, 77, 0.95);
-    --overlay-color: rgba(12, 28, 67 , 0.95);
-    --addl-color: rgba(0, 103, 187, .8);
+    --primary-color: rgba(33, 223, 230, 0.95);
+    --overlay-color: linear-gradient(244deg, #e70af2,#009bff,#4abde3);
+    --addl-color: rgba(74, 189, 227);
     --font-family: Verdana, Geneva, sans-serif
 }
-
 .container{
-    border-radius: 6px;
-    block-size: 30em;
+    border-radius: 20px;
+    block-size: 33em;
     box-shadow: 0 0 1px .6em rgba(0, 0, 0, 0.004), 0 1px 1em rgba(0, 0, 0, 0.06);
     inline-size: 375px;
     overflow: auto;
@@ -22,6 +21,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     background-color: var(--addl-color);
     font-family: var(--font-family);
@@ -39,30 +39,34 @@ h1{
     font-family: var(--font-family);
     font-weight: 500;
 }
+
+
 .first-button{
+    border-radius: 10px;
     display: inline-block;
     border: none;
-    background-color: var(--primary-color);
+    background-color: rgb(123, 83, 234);
     color: white;
     padding: 1.2rem 6rem;
-    margin-top: .2rem;
+    margin-top: 100px;
     transition: opacity .6s ease-in-out;
     text-decoration: none;
     font-size: 1rem;
     letter-spacing: 0.2rem;
     font-weight: 500;
+    width: 100%;
 }
 .second-button{
-    display: inline-block;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
     background-color: white;
-    color: var(--primary-color);
-    padding: 1.2rem 4.8rem;
-    text-decoration: none;
+    color: rgb(123, 83, 234);
     font-size: 1.15rem;
     text-underline-position: under;
     letter-spacing: 0.08rem;
     font-weight: 500;
-    text-align: center;
+    padding: 0.8rem 4.9rem;
 }
 .first-button:hover{
     opacity: .95;
